--- a/index.html
+++ b/index.html
@@ -251,6 +251,7 @@ for the JavaScript code in this tag.
 <li><a href="posts/聪明的投资者.html">聪明的投资者</a></li>
 <li><a href="posts/被讨厌的勇气.html">被讨厌的勇气</a></li>
 <li><a href="posts/证券分析.html">证券分析</a></li>
+<li><a href="posts/有限与无限的游戏.html">有限与无限的游戏</a></li>
 </ul>
 </div>
 </div>
