--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
   pre.src-fortran:before { content: 'Fortran'; }
   pre.src-gnuplot:before { content: 'gnuplot'; }
   pre.src-haskell:before { content: 'Haskell'; }
+  pre.src-hledger:before { content: 'hledger'; }
   pre.src-java:before { content: 'Java'; }
   pre.src-js:before { content: 'Javascript'; }
   pre.src-latex:before { content: 'LaTeX'; }
@@ -158,6 +159,19 @@
   .footdef  { margin-bottom: 1em; }
   .figure { padding: 1em; }
   .figure p { text-align: center; }
+  .equation-container {
+    display: table;
+    text-align: center;
+    width: 100%;
+  }
+  .equation {
+    vertical-align: middle;
+  }
+  .equation-label {
+    display: table-cell;
+    text-align: right;
+    vertical-align: middle;
+  }
   .inlinetask {
     padding: 10px;
     border: 2px solid gray;
@@ -183,7 +197,7 @@
 @licstart  The following is the entire license notice for the
 JavaScript code in this tag.
 
-Copyright (C) 2012-2017 Free Software Foundation, Inc.
+Copyright (C) 2012-2020 Free Software Foundation, Inc.
 
 The JavaScript code in this tag is free software: you can
 redistribute it and/or modify it under the terms of the GNU
@@ -228,30 +242,29 @@ for the JavaScript code in this tag.
 <body>
 <div id="content">
 <h1 class="title">Weei's Blog</h1>
-<div id="outline-container-org1a39d45" class="outline-2">
-<h2 id="org1a39d45">Site Index</h2>
-<div class="outline-text-2" id="text-org1a39d45">
-</div><div id="outline-container-org5cffedf" class="outline-3">
-<h3 id="org5cffedf">Article</h3>
-<div class="outline-text-3" id="text-org5cffedf">
+<div id="outline-container-orgbd267c5" class="outline-2">
+<h2 id="orgbd267c5">Site Index</h2>
+<div class="outline-text-2" id="text-orgbd267c5">
+</div>
+<div id="outline-container-org178141c" class="outline-3">
+<h3 id="org178141c">Article</h3>
+<div class="outline-text-3" id="text-org178141c">
 <ul class="org-ul">
 <li><a href="posts/rust学习笔记-所有权,引用和借用.html">rust核心概念:所有权,引用和借用</a></li>
 <li><a href="posts/以GroupCache为例谈分布式缓存.html">以GroupCache为例谈分布式缓存</a></li>
 </ul>
 </div>
 </div>
-
-
-
-<div id="outline-container-orge74d9e4" class="outline-3">
-<h3 id="orge74d9e4">Reading</h3>
-<div class="outline-text-3" id="text-orge74d9e4">
+<div id="outline-container-org386c8e9" class="outline-3">
+<h3 id="org386c8e9">Reading</h3>
+<div class="outline-text-3" id="text-org386c8e9">
 <ul class="org-ul">
 <li><a href="posts/开放社会及其敌人.html">开放社会及其敌人</a></li>
 <li><a href="posts/聪明的投资者.html">聪明的投资者</a></li>
 <li><a href="posts/被讨厌的勇气.html">被讨厌的勇气</a></li>
 <li><a href="posts/证券分析.html">证券分析</a></li>
 <li><a href="posts/有限与无限的游戏.html">有限与无限的游戏</a></li>
+<li><a href="posts/方法论.html">方法论</a></li>
 </ul>
 </div>
 </div>
