--- a/index.html
+++ b/index.html
@@ -272,6 +272,7 @@ for the JavaScript code in this tag.
 <li><a href="posts/卓有成效的管理者.html">卓有成效的管理者</a></li>
 <li><a href="posts/聊天约会通论.html">聊天约会通论</a></li>
 <li><a href="posts/伦理学原理.html">伦理学原理</a></li>
+<li><a href="posts/幸福之路.html">幸福之路</a></li>
 </ul>
 </div>
 </div>
