--- a/index.html
+++ b/index.html
@@ -252,9 +252,11 @@ for the JavaScript code in this tag.
 <ul class="org-ul">
 <li><a href="posts/rust学习笔记-所有权,引用和借用.html">rust核心概念:所有权,引用和借用</a></li>
 <li><a href="posts/以GroupCache为例谈分布式缓存.html">以GroupCache为例谈分布式缓存</a></li>
+<li><a href="posts/交互式证明的知识复杂度.html">交互式证明的知识复杂度</a></li>
 </ul>
 </div>
 </div>
+
 <div id="outline-container-org386c8e9" class="outline-3">
 <h3 id="org386c8e9">Reading</h3>
 <div class="outline-text-3" id="text-org386c8e9">
