--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@ for the JavaScript code in this tag.
 <li><a href="posts/rust学习笔记-所有权,引用和借用.html">rust核心概念:所有权,引用和借用</a></li>
 <li><a href="posts/以GroupCache为例谈分布式缓存.html">以GroupCache为例谈分布式缓存</a></li>
 <li><a href="posts/交互式证明的知识复杂度.html">交互式证明的知识复杂度</a></li>
+<li><a href="posts/zk-snark算法分析.html">zk-snark算法分析</a></li>
 </ul>
 </div>
 </div>
@@ -275,6 +276,7 @@ for the JavaScript code in this tag.
 <li><a href="posts/聊天约会通论.html">聊天约会通论</a></li>
 <li><a href="posts/伦理学原理.html">伦理学原理</a></li>
 <li><a href="posts/幸福之路.html">幸福之路</a></li>
+<li><a href="posts/21世纪货币史.html">21世纪货币史</a></li>
 </ul>
 </div>
 </div>
