--- a/index.html
+++ b/index.html
@@ -216,13 +216,13 @@
 <body>
 <div id="content" class="content">
 <h1 class="title">Weei's Blog</h1>
-<div id="outline-container-org72122be" class="outline-2">
-<h2 id="org72122be">Site Index</h2>
-<div class="outline-text-2" id="text-org72122be">
+<div id="outline-container-org365765c" class="outline-2">
+<h2 id="org365765c">Site Index</h2>
+<div class="outline-text-2" id="text-org365765c">
 </div>
-<div id="outline-container-orgf03f82c" class="outline-3">
-<h3 id="orgf03f82c">Article</h3>
-<div class="outline-text-3" id="text-orgf03f82c">
+<div id="outline-container-org07adf51" class="outline-3">
+<h3 id="org07adf51">Article</h3>
+<div class="outline-text-3" id="text-org07adf51">
 <ul class="org-ul">
 <li><a href="posts/rust学习笔记-所有权,引用和借用.html">rust核心概念:所有权,引用和借用</a></li>
 <li><a href="posts/以GroupCache为例谈分布式缓存.html">以GroupCache为例谈分布式缓存</a></li>
@@ -231,9 +231,9 @@
 </div>
 </div>
 
-<div id="outline-container-org782598a" class="outline-3">
-<h3 id="org782598a">Reading</h3>
-<div class="outline-text-3" id="text-org782598a">
+<div id="outline-container-org1039052" class="outline-3">
+<h3 id="org1039052">Reading</h3>
+<div class="outline-text-3" id="text-org1039052">
 <ul class="org-ul">
 <li><a href="posts/开放社会及其敌人.html">开放社会及其敌人</a></li>
 <li><a href="posts/聪明的投资者.html">聪明的投资者</a></li>
