--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
 <li><a href="posts/幸福之路.html">幸福之路</a></li>
 <li><a href="posts/21世纪货币史.html">21世纪货币史</a></li>
 <li><a href="posts/人性的弱点.html">人性的弱点</a></li>
+<li><a href="posts/福格行为模型.html">福格行为模型</a></li>
 </ul>
 </div>
 </div>
